# parallel-orchestra

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  _po_cwd_debug.txt  _po_cwd_debug_tdd-addition.txt  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: architect.md  code-reviewer.md  developer.md  doc-writer.md  interviewer.md  planner.md  project-setup.md  security-reviewer.md  tdd-develop.md
.claude/commands/: develop.md  doc.md  extract-lib.md  init-session.md  mcp.md  promote-pattern.md  review.md  setup.md  start.md
.claude/hooks/: clear_file_history.py  enable_sandbox.py  log_agent.py  pre_compact.py  pre_tool.py  statusline.py  stop.py  validate_skill_change.py  worktree_guard.py
.claude/memory/: patterns.json
.claude/memory/sessions/: 20260429.tmp
.claude/reports/: plan-report-20260429-161832.md  plan-report-20260429-162627.md  plan-report-20260429-163111.md  plan-report-20260429-163419.md  plan-report-20260429-163755.md  plan-report-20260429-164540.md  plan-report-20260429-164934.md  plan-report-20260429-165210.md  plan-report-20260429-170536.md  plan-report-20260429-170903.md  plan-report-20260429-171123.md  plan-report-20260429-172202.md  plan-report-20260429-180702.md  plan-report-20260429-180836.md  plan-report-20260429-181054.md  test-report-20260429-202043.md  test-report-20260430-173733.md  test-report-20260430-173756.md  test-report-20260430-174011.md  test-report-20260430-174022.md
.claude/rules/: code-review-checklist.md  coding-standards.md  project-conventions.md  security-review-checklist.md
.claude/rules/promoted/: index.md
.claude/skills/: dev-workflow.md  worktree-tdd-workflow.md
.claude/skills/promoted/: index.md
.github/workflows/: ci.yml  publish.yml
example/: pyproject.toml
example/.claude/: CLAUDE.md  settings.json
example/.claude/agents/: developer.md  tester.md
example/.claude/docs/: parallel-orchestra-manifest.md
example/.claude/reports/: plan-report-tdd-example.md  test-report-20260430-230639.md  test-report-20260430-230954.md
example/.claude/skills/: worktree-tdd-workflow.md
example/src/: addition.py  multiplication.py
example/tests/: test_addition.py  test_multiplication.py
src/parallel_orchestra/: __init__.py  __main__.py  _exceptions.py  cli.py  manifest.py  report.py  run_state.py  runner.py
tests/: conftest.py  test_cli.py  test_manifest.py  test_report.py  test_resume_deps.py  test_retry_backoff.py  test_review_fixes.py  test_review_fixes2.py  test_review_fixes3.py  test_review_fixes4.py  test_review_fixes5.py  test_run_state.py  test_runner_t7.py  test_runner_v04_fix.py  test_runner_v04_m1.py  test_runner_v04_m2.py
